--- a/src/Components/Career/Homecareer.css
+++ b/src/Components/Career/Homecareer.css
@@ -1,14 +1,14 @@
 .homecareer{
     background-color: #162447;
     color: white;
-    height: 300px;
+    height: auto;
     padding-top: 0px;
- 
-    
+   overflow: hidden;
+    margin-top: 5%;
 }
 
 span h1{
-    padding-top: 30px;
+    padding-top: 0px;
     font-size: xx-large;
     overflow: hidden;
     
@@ -43,9 +43,9 @@ span h1{
 @media screen and (max-width: 851px){
   .homecareer{
     overflow: hidden;
-    margin-top: 5%;
+    
     margin-bottom: 5%;
-    height: 450px;
+    height: auto;
     
   }
   .careerbutton{
