--- a/src/Components/HomeServices.js/ServiceTemplate.css
+++ b/src/Components/HomeServices.js/ServiceTemplate.css
@@ -1,6 +1,7 @@
 .headd{
     margin-top: 5%;
-    margin-bottom: 2%;
+    margin-bottom: 1%;
+    overflow: hidden;
 }
 
 .card1{
@@ -18,12 +19,14 @@
     box-shadow: 0 0 35px rgba(0, 0, 0, 0.12);
     cursor: pointer;
     transition: 0.5s;
+    overflow: hidden;
 
 
   
 }
 
 .servicebutton{
+    overflow: hidden;
    max-width: 80%;
    background-color:#162447;
    color: white;
@@ -36,6 +39,7 @@
    text-align: center;
 }
 .servicebutton:hover{
+    overflow: hidden;
     background-color: white;
     border: 1px solid black;
     font-weight: 600 ;
@@ -43,6 +47,7 @@
     transition: 0.8s;
 }
 .h3{
+    overflow: hidden;
     text-align: center;
     margin-top: 5%;
     color: black;
@@ -51,6 +56,7 @@
     letter-spacing: 0.03em;
 }
 .icon-wrapper {
+    overflow: hidden;
     background-color:#162447;
     position: relative;
     margin: auto;
@@ -66,13 +72,16 @@
 
 
   .card1:hover {
+    overflow: hidden;
     background-position: 0 100%;
   }
   .card1:hover .icon-wrapper {
+    overflow: hidden;
    background-color:#162447 ;
     color: white;
   }
   .card1:hover .h3 {
+    overflow: hidden;
     color: #ffffff;
   }
   
@@ -80,6 +89,7 @@
 
 @media screen and (max-width: 851px) {
     .card1{
+        overflow: hidden;
         height: 4000%;
         width:50%;
 
@@ -91,6 +101,7 @@
 }
 @media screen and (max-width: 912px){
     .card1{
+        overflow: hidden;
         width: 70%;
         margin-left: 15%;
         justify-content: center;
