--- a/src/Components/HorizontalSlider/Slider.css
+++ b/src/Components/HorizontalSlider/Slider.css
@@ -4,10 +4,15 @@
     height:600px;
     padding-top: 0px;
 }
+.sliderh{
+    overflow-y: hidden;
+    overflow-x: hidden;
+}
 .sliderimg{
     width: 180px;
     height: 120px;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
 }
 .abouttext p{
     padding: 50px 50px 50px 50px;
@@ -23,7 +28,8 @@
     border: 2px solid black;
     border-radius: 12px;
     padding: 20px 20px 20px 20px;
-    overflow: hidden;
+    overflow-y: hidden;
+    overflow-x: hidden;
    
 }
 .slider img:hover{
@@ -34,9 +40,9 @@
     margin-top: 5%;
     margin-left: 30%;
     margin-right: 30%;
-    margin-bottom: 10%;
-    
-    overflow: hidden;
+    margin-bottom: 5%;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 h1{
     margin-top: 5%;
@@ -50,15 +56,17 @@ h1{
         height: auto;
     }
     .slider{
-   overflow: hidden;
+   overflow-y: hidden;
         margin-top: 5%;
         margin-left: 5%;
         margin-right:5%;
         margin-bottom: 10%;
+        overflow-x: hidden;
     }
     .slider img{
-        overflow: hidden;
+        overflow-y: hidden;
         margin-top: 10%;
+        overflow-x: hidden;
         
     }
 }
