Landing page updates

--- a/src/Components/HorizontalSlider/Slider.css
+++ b/src/Components/HorizontalSlider/Slider.css
@@ -67,6 +67,7 @@ h1{
         overflow-y: hidden;
         margin-top: 10%;
         overflow-x: hidden;
+        overflow-y: hidden;
         
     }
 }
