--- a/src/Components/HomeLandingpage/landig.css
+++ b/src/Components/HomeLandingpage/landig.css
@@ -13,11 +13,13 @@
 .headdd{
   height: auto;
   margin-top: 10%;
-  font-size: xx-large;
+  font-size: 40px;
   font-weight: 600;
   width: 70%;
-  margin-left: 20%;
+  margin-left: auto;
+  margin-right: auto;
   overflow: hidden;
+  text-align:center;
 }
 blockquote {
   height: auto;
@@ -54,12 +56,14 @@ blockquote:after {
 
 .financequote{
   height: auto;
-  margin-left: 9%;
+  margin-left: auto;
+  margin-right: auto;
   margin-top: 3%;
   width: 80%;
-  font-size:x-large;
+  font-size:23px;
   font-weight: 600;
   overflow: hidden;
+  text-align:center;
  
 }
 .abthed{
@@ -67,6 +71,7 @@ blockquote:after {
   color: white;
   font-size: xx-large;
   font-weight: 600;
+  margin-left: 5%;
 }
 .aboutlanding{
 
@@ -83,14 +88,18 @@ blockquote:after {
   width: 350px;
   height: 250px;
   overflow: hidden;
-  margin-left: 25%;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
 }
 .abtinfo{
   color: white;
-  font-size: larger;
+  font-size: 20px;
+  font-weight: 350;
   margin-left: -10%;
   width: 100%;
   overflow: hidden;
+  text-align: center;
 }
 .financebtn{
   overflow: hidden;
@@ -130,7 +139,7 @@ blockquote:after {
   transition: 0.8s;
   overflow: hidden;
 }
-@media screen and (max-width: 851px){
+@media screen and (max-width: 897px){
   .abtbutton{
     text-align: center;
     margin-left: 20px;
@@ -141,13 +150,15 @@ blockquote:after {
     overflow: hidden;
   }
   .aimages{
-    margin-left: 0%;
+    
+    justify-content: center;
     overflow: hidden;
     padding: 20px 20px 20px 20px;
   }
   .abtinfo{
     overflow: hidden;
-     margin-left: 0%;
+     margin-left: auto;
+     margin-right: auto;
      margin-top: 10%;
      padding: 20px 20px 20px 20px;
   }
@@ -155,34 +166,148 @@ blockquote:after {
     overflow: hidden;
   }
   .headdd{
-    font-size: larger;
+    font-size: 23px;
     font-weight: 600;
     overflow: hidden;
   }
   .financequote{
-    margin-left: 2%;
     margin-top: 3%;
-    width: 100%;
-    font-size: large;
+    width: 95%;
+    font-size: 20px;
     font-weight: 600;
     height: auto;
     overflow: hidden;
-    padding: 20px 20px 20px 20px;
+    padding: 0px;
   }
-    .landing{
-      overflow: hidden;
-        background-image: url("../images//landing.jpg");
-        background-repeat: no-repeat;
-        background-size: cover;
-        width:auto;
-      height:auto;
-      overflow: hidden;
-      overflow-y: hidden;
+  .landing{
+   overflow: hidden;
+    background-image: url("../images//landing.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    width:auto;
+    height:auto;
+    overflow: hidden;
+    overflow-y: hidden;
     }
-    .limages{
-      overflow: hidden;
-        justify-content: center;
-        width: 350px;
-        height: 400px
+  .limages{
+    margin-left: 7px;
+    padding-left: 4px;
+    overflow: hidden;
+    
+    width: 350px;
+    height: 400px;
+        
     }
+    .financebtn{
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+    .abtbutton{
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width:1100px){
+  body{
+    width:100%;
+    overflow: hidden;
+  }
+  .financebtn{
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+  .aimages{
+    margin-top: 5%;
+  }
+  .limages{
+    margin-left: 20%;
+    margin-top: 5%;
+  }
+  .headdd{
+    font-size: 50px;
+    width:90%;
+  }
+  .financequote{
+    font-size: 30px;
+  }
+  .abtinfo{
+    font-size: 30px;
+    margin-top: 5%;
+  }
+  .abtbutton{
+    margin-top: 2%;
+  
+  }
+  .abthed{
+    font-size: 60px;
+  }
+}
+@media only screen and (min-width: 280px) and (max-width:653px){
+  .headdd{
+    width:90%;
+    font-size: 30px;
+  }
+  .financequote{
+    font-size: 20px;
+    width: 100%;
+  }
+ .limages{
+  width:100%;
+  margin-left: auto;
+  margin-right: auto;
+ }
+ .aimages{
+  width:100%;
+  margin-left: auto;
+  margin-right: auto;
+ }
+}
+@media only screen and (min-width: 912px) and (max-width:1000px){
+  .abtinfo{
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+    width:90%;
+  }
+  .abtbutton{
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
+  }
+
+}
+@media only screen and (min-width: 540px) and (max-width:600px){
+  .headdd{
+    font-size: 40px;
+    width:90%;
+  }
+  .financequote{
+    font-size: 20px;
+  }
+}
+@media only screen and (min-width: 1024px) and (max-width:1100px){
+  .limages{
+    width: 70%;
+  }
+.abthed{
+  margin-left: 180px;
+}
+.abtinfo{
+  text-align: justify;
+  font-size: 20px;
+}
+.financequote{
+  font-size: 20px;
+}
+}
+@media only screen and (min-width: 1280px) and (max-width:1300px){
+  .abtinfo{
+    text-align: left;
+  }
+  .abthed{
+    font-size: 40px;
+  }
 }
