--- a/src/Components/HomepageQuote/HomepageQuote.css
+++ b/src/Components/HomepageQuote/HomepageQuote.css
@@ -52,3 +52,20 @@
        
     }
 }
+@media only screen and (min-width: 768px) and (max-width:1100px){
+    .Quote p{
+        font-size: 30px;
+    }
+    
+}
+@media only screen and (min-width: 912px) and (max-width:1100px){
+    .Quote p{
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+    .Quote img{
+        margin-bottom: 5%;
+    }
+}
