--- a/src/Components/LinksComponent/LinkComp.css
+++ b/src/Components/LinksComponent/LinkComp.css
@@ -11,7 +11,7 @@
 }
 .links a{
     color: white;
-    font-size:larger;
+    font-size:20px;
 }
 .links i{
     font-weight: 900;
@@ -37,4 +37,20 @@
         margin-top: 4%;
         height: auto;
     }
+}
+
+@media only screen and (min-width: 280px) and (max-width:653px){
+    .links i{
+        font-weight: 100;
+        font-size: 40;
+        
+    }
+    .links a{
+        font-size:15px;
+    }
+}
+@media only screen and (min-width: 760px) and (max-width:1023px){
+    .links a{
+        font-size:35px;
+    } 
 }
