--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -1,6 +1,7 @@
 .aboutscroll{
     overflow: hidden;
 }
+
 .ahead{
     overflow: hidden;
     font-size:xx-large;
@@ -25,6 +26,8 @@ overflow: hidden;
     margin-top: 3%;
     border: 2px solid darkmagenta;
     padding: 5px 5px 5px 5px;
+    margin-left: auto;
+    margin-right: auto;
 }
 .ceoheading{
     font-size: larger;
@@ -52,11 +55,13 @@ overflow: hidden;
 }
 .atid{
     text-align: center;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
+    display:block;
     font-size: larger;
     margin-top: 2%;
     overflow: hidden;
+    width:80%;
 }
 .wph{
     font-size: xx-large;
@@ -101,6 +106,7 @@ position:relative;
     margin-bottom: 60px;
     text-align: center;
     overflow: hidden;
+    margin-top: 5%;
 }
 .ourteam{
 
@@ -156,7 +162,11 @@ position:relative;
     padding: 10px;
     
 }
+.ceoheading{
+    width:90%;
+    text-align: justify;
 
+}
 
 @media screen and (max-width: 851px){
     .teammembers p ,.teammembers h3{
@@ -167,8 +177,12 @@ position:relative;
     }
     .ceoheading{
         overflow: hidden;
-        width: auto;
+        width: 90%;
         font-size: medium;
+    }
+    .atid{
+        font-size: 18px;
+        font-weight: 400;
     }
     .ahead{
         overflow: hidden;
@@ -199,5 +213,73 @@ position:relative;
    transform: translateX(0%);
     transform: translateY(0%);
 }
+.role{
+    font-size: 12px;
+}
 
+}
+@media only screen and (min-width: 280px) and (max-width:653px){
+    .teammembers{
+        width:80%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .ahead{
+        font-size: 30px;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width:1100px){
+    .ahead{
+        font-size: 60px;
+    }
+    .degree{
+        font-size: 30px;
+    }
+    .ceoheading{
+        font-size: 30px;
+    }
+    .atih{
+        font-size: 40px;
+    }
+    .atid{
+        font-size: 30px;
+    }
+    .oteam{
+        font-size: 60px;
+    }
+    .inn{
+        font-size: 15px;
+    }
+    .whyprudence{
+        font-size: 40px;
+    }
+    .whyprudence h3{
+        font-size: 30px;
+    }
+
+}
+@media only screen and (min-width: 1024px) and (max-width:1100px){
+    .degree{
+        font-size: 20px;
+    }
+    .ceoheading{
+        font-size: 20px;
+    }
+    .atih{
+        font-size: 30px;
+    }
+    .atid{
+        font-size: 20px;
+    }
+    
+}
+
+
+@media only screen and (min-width: 1280px) and (max-width:1300px){
+    .ahead{
+        font-size: 50px;
+    }
+    .oteam{
+        font-size: 50px;
+    }
 }
